# scanning-drift-corr

./: .gitignore  MANIFEST.in  README.asv  README.md  README_original.md  example.ipynb  python_conversion_plan.txt  setup.cfg  setup.py
examples/: example.ipynb  example.py
matlab/: SPmakeImage.m  SPmerge01linear.m  SPmerge02.m  SPmerge03.m  outdated_SPmerge_instructions.txt
matlab_modified/: CHANGELOG.md  SPmakeImage.m  SPmerge01.m  SPmerge01_timeSeries.m  SPmerge01linear.m  SPmerge02.m  SPmerge03.m  makeFourierCoords.m  makeRefUnitCell.m
python/: README.md  example.html  example.py  setup.py
python/scanning_drift_corr/: SPmakeImage.py  SPmerge01linear.py  SPmerge02.py  SPmerge02_final.py  SPmerge02_initial.py  SPmerge02_phase_correlation.py  SPmerge03.py  api.py  sMerge.py  tools.py
python/scanning_drift_corr/tests/: README.md  conftest.py  probe_90_not_work.py  test_SPmakeImage.py  test_SPmerge01linear.py  test_SPmerge02_1e-3_delta.py  test_SPmerge02_1e-5_delta.py  test_SPmerge03_1e-5_delta.py  test_sMerge.py
scanning_drift_corr/: SPmakeImage.py  SPmerge02.py  SPmerge02_phase_correlation.py
scanning_drift_corr/tests/: README.md  test_sMerge.py
scanning_drift_corr/tests/matlab_get_test_data/: small_delta_matrix.mat
scanning_drift_corr/tests/matlab_result/: SPmakeimage_rotated_KDE_sig_count_ang120_simu.mat  SPmakeimage_rotated_KDE_sig_count_ang30_simu.mat  SPmakeimage_rotated_KDE_sig_count_ang30_small_delta.mat  SPmakeimage_rotated_KDE_sig_count_ang40_simu.mat  SPmakeimage_rotated_KDE_sig_count_angm50_simu.mat  SPmakeimage_rotated_sig_count_ang30_small_delta.mat  SPmakeimage_sub_ang30_small_delta.mat  SPmerge01linear_result_small_delta.mat  init_scanOr_0_90_180_270_dummy_sequential.mat  (+2 more)
src/scanning_drift_corr/: SPmerge01linear.py  SPmerge02.py  SPmerge02_final.py  SPmerge03.py  sMerge.py  tools.py
(+37 files in other folders)
