[metadata]
name = scanning_drift_corr
version = 1.0.0
author = Timothy Poon
author_email = timothy0626@gmail.com
description = Correct scan drift distortion
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ptim0626/scanning-drift-corr
project_urls =
    Bug Tracker = https://github.com/ptim0626/scanning-drift-corr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    matplotlib
    scipy
    tqdm

[options.packages.find]
where = src

[options.extras_require]
tests = pytest

[options.package_data]
tests =
    *.mat
    matlab_result/*.mat
    matlab_result/SPmerge02/*.mat
    matlab_result/SPmerge03/*.mat
